<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/transaction_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:elevation="1dp"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:theme="@style/TextLabel">

                <customfonts.PrefixEditTest
                    android:id="@+id/sheet_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sheet_id"
                    android:maxLines="1"
                    android:inputType="none"
                    android:focusable="false"
                    android:textSize="15sp"
                    android:textColor="@color/colorSuccess"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name"
                    android:maxLines="1"
                    android:inputType="none"
                    android:focusable="false"
                    android:textSize="15sp"
                    android:textColor="@color/colorSuccess"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/create_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_date"
                    android:maxLines="1"
                    android:inputType="none"
                    android:focusable="false"
                    android:textSize="15sp"
                    android:textColor="@color/colorSuccess" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/total_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_count"
                    android:maxLines="1"
                    android:inputType="none"
                    android:focusable="false"
                    android:textSize="15sp"
                    android:textColor="@color/colorSuccess"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/finish_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/finish_date"
                    android:maxLines="1"
                    android:clickable="true"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"
                    android:focusable="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/success_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/success_count"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/fail_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fail_count"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/pop_up"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:weightSum="2" >

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:onClick="trySave"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:onClick="tryAddHistory"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
