<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/transaction_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:elevation="1dp"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/owner"
                    android:maxLines="1"
                    android:inputType="none"
                    android:focusable="false"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name"
                    android:maxLines="1"
                    android:inputType="none"
                    android:focusable="false"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/operation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/operation"
                    android:maxLines="1"
                    android:inputType="none"
                    android:focusable="false"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/history_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:maxLines="1"
                    android:clickable="true"
                    android:textSize="15sp"
                    android:textColor="@color/colorSuccess"
                    android:focusable="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/success_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/success_count"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:textSize="15sp"
                    android:textColor="@color/colorSuccess"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/fail_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fail_count"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:textSize="15sp"
                    android:textColor="@color/colorSuccess"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    android:textSize="15sp"
                    android:textColor="@color/colorSuccess"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/pop_up"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="60dp" />

    <Button
        android:id="@+id/login_button"
        android:onClick="modify"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/button_background"
        android:textSize="15sp"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
