<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/transaction_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:elevation="1dp"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <customfonts.EditText_Roboto_Regular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/choose_product"
                    android:inputType="none"
                    android:focusable="false"
                    android:textSize="15sp"
                    android:textColor="?android:textColorHint"/>
            </android.support.design.widget.CoordinatorLayout>

            <Spinner
                android:id="@+id/product_list"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:clipToPadding="false"
                android:textColor="@color/colorAccent"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/history_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:maxLines="1"
                    android:clickable="true"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"
                    android:focusable="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/count"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/TextLabel">

                <customfonts.EditText_Roboto_Regular
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    android:textSize="15sp"
                    android:textColor="@color/trans_text_black"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/pop_up"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/button"
            android:onClick="tryAddHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/button_selector"
            android:textSize="15sp" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
